...
    name: "Vanier Library Building",
    address: "7141 Sherbrooke St. W.",
  },
  ve: {
    latitude: 45.458943,
    longitude: -73.639173,
    name: "Vanier Extension",
    address: "7141 Sherbrooke St. W.",
  },
};

export default buildingCoordinates;

